src/test/test-models/bad/lang/bad5.stan
derived data {
  real y;
  y <- lp__;
}
model {
    lp__ <- 2.0;
}